--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://y4ma.36.github.io/Crypto_Website/"
+  "homepage": "https://y4ma36.github.io/Crypto_Website/"
+
 }
